force-app/main/default/objects/Public_Holiday__c/Public_Holiday__c.object-meta.xml
<CustomObject>
    <label>Public Holiday</label>
    <nameField>
        <label>Public Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Public Holiday</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>