force-app/main/default/objects/Public_Holiday__c/fields/Countries_Celebrating__c.field-meta.xml
<CustomField>
    <fullName>Countries_Celebrating__c</fullName>
    <label>Countries Celebrating</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>