force-app/main/default/objects/Public_Holiday__c/fields/Falls_on_a_Work_Day__c.field-meta.xml
<CustomField>
    <fullName>Falls_on_a_Work_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Falls on a Work Day</label>
    <type>Checkbox</type>
</CustomField>