force-app/main/default/objects/Public_Holiday__c/fields/Is_Fixed_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_Fixed_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Fixed Date</label>
    <type>Checkbox</type>
</CustomField>