force-app/main/default/objects/Public_Holiday__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Holiday_Date__c</columns>
    <columns>Day_of_the_Week__c</columns>
    <columns>Countries_Celebrating__c</columns>
    <columns>Holiday_Month__c</columns>
    <columns>Falls_on_a_Work_Day__c</columns>
    <columns>Is_Fixed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>