force-app/main/default/objects/Public_Holiday__c/listViews/Public_Holidays_SE.listView-meta.xml
<ListView>
    <fullName>Public_Holidays_SE</fullName>
    <columns>NAME</columns>
    <columns>Holiday_Date__c</columns>
    <columns>Day_of_the_Week__c</columns>
    <columns>Countries_Celebrating__c</columns>
    <columns>Holiday_Month__c</columns>
    <columns>Falls_on_a_Work_Day__c</columns>
    <columns>Is_Fixed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Countries_Celebrating__c</field>
        <operation>includes</operation>
        <value>Sweden</value>
    </filters>
    <label>Public Holidays (SE)</label>
</ListView>